Fix distortion of people's image

--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -151,7 +151,8 @@
 
 .clickable-modal-trigger {
   color: #007bff;
-  height: 100%
+  height: 95%;
+  width: auto;
 }
 
 .clickable-modal-trigger:hover {
@@ -224,8 +225,6 @@
   }
   .img-fluid {
     margin-bottom: 10px;
-    /* height: 100%; */
-    /* width: 100%; */
   }
   #professor-name {
     display: block !important;
